tests/snapshots/tokenize__struct_designated_partial.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "struct at 3:1\nIdentifier(Point) at 3:8\n{ at 3:14\nint at 4:5\nIdentifier(x) at 4:9\n; at 4:10\nint at 5:5\nIdentifier(y) at 5:9\n; at 5:10\nint at 6:5\nIdentifier(z) at 6:9\n; at 6:10\n} at 7:1\n; at 7:2\nint at 9:1\nIdentifier(main) at 9:5\n( at 9:9\n) at 9:10\n{ at 9:12\nstruct at 10:5\nIdentifier(Point) at 10:12\nIdentifier(p) at 10:18\n= at 10:20\n{ at 10:22\n. at 10:23\nIdentifier(y) at 10:24\n= at 10:26\nIntLiteral(20) at 10:28\n} at 10:30\n; at 10:31\nreturn at 12:5\nIdentifier(p) at 12:12\n. at 12:13\nIdentifier(y) at 12:14\n; at 12:15\n} at 13:1\nEOF at 14:1\n"
stderr: ""
status: 0
