tests/snapshots/tokenize__struct_nested_init.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "struct at 3:1\nIdentifier(Inner) at 3:8\n{ at 3:14\nint at 4:5\nIdentifier(a) at 4:9\n; at 4:10\nint at 5:5\nIdentifier(b) at 5:9\n; at 5:10\n} at 6:1\n; at 6:2\nstruct at 8:1\nIdentifier(Outer) at 8:8\n{ at 8:14\nint at 9:5\nIdentifier(x) at 9:9\n; at 9:10\nstruct at 10:5\nIdentifier(Inner) at 10:12\nIdentifier(inner) at 10:18\n; at 10:23\nint at 11:5\nIdentifier(y) at 11:9\n; at 11:10\n} at 12:1\n; at 12:2\nint at 14:1\nIdentifier(main) at 14:5\n( at 14:9\n) at 14:10\n{ at 14:12\nstruct at 15:5\nIdentifier(Outer) at 15:12\nIdentifier(o) at 15:18\n= at 15:20\n{ at 15:22\n. at 15:23\nIdentifier(x) at 15:24\n= at 15:26\nIntLiteral(5, None) at 15:28\n, at 15:29\n. at 15:31\nIdentifier(inner) at 15:32\n= at 15:38\n{ at 15:40\n. at 15:41\nIdentifier(a) at 15:42\n= at 15:44\nIntLiteral(10, None) at 15:46\n, at 15:48\n. at 15:50\nIdentifier(b) at 15:51\n= at 15:53\nIntLiteral(20, None) at 15:55\n} at 15:57\n, at 15:58\n. at 15:60\nIdentifier(y) at 15:61\n= at 15:63\nIntLiteral(15, None) at 15:65\n} at 15:67\n; at 15:68\nstruct at 16:5\nIdentifier(Inner) at 16:12\n* at 16:17\nIdentifier(ptr) at 16:19\n= at 16:23\n& at 16:25\nIdentifier(o) at 16:26\n. at 16:27\nIdentifier(inner) at 16:28\n; at 16:33\nreturn at 17:5\nIdentifier(o) at 17:12\n. at 17:13\nIdentifier(x) at 17:14\n+ at 17:16\nIdentifier(ptr) at 17:18\n-> at 17:21\nIdentifier(a) at 17:23\n+ at 17:25\nIdentifier(ptr) at 17:27\n-> at 17:30\nIdentifier(b) at 17:32\n+ at 17:34\nIdentifier(o) at 17:36\n. at 17:37\nIdentifier(y) at 17:38\n; at 17:39\n} at 18:1\nEOF at 19:1\n"
stderr: ""
status: 0
