tests/snapshots/tokenize__switch_fallthrough.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 2:1\nIdentifier(main) at 2:5\n( at 2:9\n) at 2:10\n{ at 2:12\nint at 3:5\nIdentifier(x) at 3:9\n= at 3:11\nIntLiteral(1, None) at 3:13\n; at 3:14\nint at 4:5\nIdentifier(result) at 4:9\n= at 4:16\nIntLiteral(0, None) at 4:18\n; at 4:19\nswitch at 5:5\n( at 5:12\nIdentifier(x) at 5:13\n) at 5:14\n{ at 5:16\ncase at 6:9\nIntLiteral(1, None) at 6:14\n: at 6:15\nIdentifier(result) at 7:13\n= at 7:20\nIdentifier(result) at 7:22\n+ at 7:29\nIntLiteral(1, None) at 7:31\n; at 7:32\ncase at 8:9\nIntLiteral(2, None) at 8:14\n: at 8:15\nIdentifier(result) at 9:13\n= at 9:20\nIdentifier(result) at 9:22\n+ at 9:29\nIntLiteral(10, None) at 9:31\n; at 9:33\ncase at 10:9\nIntLiteral(3, None) at 10:14\n: at 10:15\nIdentifier(result) at 11:13\n= at 11:20\nIdentifier(result) at 11:22\n+ at 11:29\nIntLiteral(100, None) at 11:31\n; at 11:34\nbreak at 12:13\n; at 12:18\n} at 13:5\nreturn at 14:5\nIdentifier(result) at 14:12\n; at 14:18\n} at 15:1\nEOF at 16:1\n"
stderr: ""
status: 0
