tests/snapshots/tokenize__ternary_basic.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 1:1\nIdentifier(main) at 1:5\n( at 1:9\n) at 1:10\n{ at 1:12\nreturn at 2:5\nIntLiteral(1) at 2:12\n? at 2:14\nIntLiteral(42) at 2:16\n: at 2:19\nIntLiteral(99) at 2:21\n; at 2:23\n} at 3:1\nEOF at 4:1\n"
stderr: ""
status: 0
