tests/snapshots/tokenize__ternary_complex.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 1:1\nIdentifier(main) at 1:5\n( at 1:9\n) at 1:10\n{ at 1:12\nint at 2:5\nIdentifier(a) at 2:9\n= at 2:11\nIntLiteral(10) at 2:13\n; at 2:15\nint at 3:5\nIdentifier(b) at 3:9\n= at 3:11\nIntLiteral(20) at 3:13\n; at 3:15\nreturn at 4:5\nIdentifier(a) at 4:12\n< at 4:14\nIdentifier(b) at 4:16\n? at 4:18\nIdentifier(a) at 4:20\n+ at 4:22\nIntLiteral(5) at 4:24\n: at 4:26\nIdentifier(b) at 4:28\n- at 4:30\nIntLiteral(5) at 4:32\n; at 4:33\n} at 5:1\nEOF at 6:1\n"
stderr: ""
status: 0
