tests/snapshots/tokenize__ternary_nested.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 1:1\nIdentifier(main) at 1:5\n( at 1:9\n) at 1:10\n{ at 1:12\nint at 2:5\nIdentifier(x) at 2:9\n= at 2:11\nIntLiteral(5, None) at 2:13\n; at 2:14\nreturn at 3:5\nIdentifier(x) at 3:12\n> at 3:14\nIntLiteral(3, None) at 3:16\n? at 3:18\n( at 3:20\nIdentifier(x) at 3:21\n> at 3:23\nIntLiteral(10, None) at 3:25\n? at 3:28\nIntLiteral(100, None) at 3:30\n: at 3:34\nIntLiteral(50, None) at 3:36\n) at 3:38\n: at 3:40\nIntLiteral(0, None) at 3:42\n; at 3:43\n} at 4:1\nEOF at 5:1\n"
stderr: ""
status: 0
